# ProgramingProject-C-

./: Accounts.csv  CMakeLists.txt  README  UI.h  Users.csv  file_manip.h  main.c  structures.h
Data Base/: Accounts.csv  Accounts_Temp.csv  Users.csv  Users_Temp.csv
DataBase Operations/: file_manip.c  file_manip.h
DataBase Operations/Data Fetch/: Fetching.c
Headers/: Fetching.h  Main Functions.h  String Operations.h  UI.h  User Input.h  file_manip.h  generate.h  main_functions.h  string_operations.h  struct.h  structures.h  structures_operations.h  user_input.h  validators.h
Sources/: Fetching.c  Main Functions.c  String Operations.c  UI.c  User Input.c  fetching.c  file_manip.c  generate.c  main_functions.c  string_operations.c  structures_operations.c  strucutres.c  user_input.c  validators.c
Structure Operations/: struct.h  structures.h  strucutres.c
Structure Operations/Generative Algorithms/: generate.c  generate.h
UI/: UI.c  UI.h
